[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defaults = "0.2.0"
druid = { version = "0.8.3", features = ["im"] }
keyframe = { version = "1.1.1", default-features = false, features = ["alloc"] }
num-traits = "0.2.15"
rand = "0.8.5"
